refactor: registrar nuevo usuario

--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mui/x-date-pickers": "^6.19.5",
     "@supabase/supabase-js": "^2.39.7",
+    "luxon": "^3.4.4",
     "notistack": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
